# DirectConvolution

./: CMakeLists.txt  README.md  data  directConvulation.cpp  direct_convolution.cpp  direct_convolution.h  mini_test.cpp
test/: test_functions.cpp  test_functions.h
